* Updated missing language keys (in english, but they can easily be fixed)
* Added summary discount report (and graphical version)
* Made headings in report listings page stand out more